Remove timer from Canvas.js and implement it in Home.js instead. Set maxDataSize in Canvas.js to prevent too large recordings.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -189,7 +189,6 @@ table {
   top: 0;
   left: 0;
 }
-
 .box {
   position: relative;
   width: 50%;
@@ -202,5 +201,32 @@ table {
   border-radius: 4px;
   padding: 10px;
   border: 2px solid #7700bd;
+  overflow: auto;
+}
+.countdown-popup-box {
+  position: fixed;
+  justify-content: space-evenly;
+  background: #000000c1;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+}
+.countdown-box {
+  position: relative;
+  text-align: center;
+  align-items: center;
+  width: 20%;
+  margin: 0 auto;
+  font-size: 10rem;
+  font-weight: 600;
+  height: auto;
+  color: rgb(195, 0, 255);
+  max-height: 90vh;
+  margin-top: calc(100vh - 70vh - 20px);
+  background: rgba(0, 0, 0, 0);
+  border-radius: 50%;
+  padding: 10px;
+  border: 10px solid #ffffff7a;
   overflow: auto;
 }
